IVYPORTAL-16254-CasenTask-widget-not-aligned-correctly_RELEASE-10
- make table expand normally

--- a/AxonIvyPortal/portal/webContent/resources/css/dashboard.css
+++ b/AxonIvyPortal/portal/webContent/resources/css/dashboard.css
@@ -588,6 +588,7 @@ body .ui-selectcheckboxmenu.task-configuration__selectcheckboxmenu .ui-selectche
 
 .dashboard-cases--table table,
 .dashboard-tasks--table table {
+  min-width: 100%;
   width: max-content;
 }
 
